# SPDX-License-Identifier: MIT
# Copyright © Andy Maloney <asmaloney@gmail.com>

target_sources( ${PROJECT_NAME}
	PRIVATE
		${CMAKE_CURRENT_LIST_DIR}/AutoSegmentationTools.h
		${CMAKE_CURRENT_LIST_DIR}/BoundingBox.h
		${CMAKE_CURRENT_LIST_DIR}/ChamferDistanceTransform.h
		${CMAKE_CURRENT_LIST_DIR}/Chi2Helper.h
		${CMAKE_CURRENT_LIST_DIR}/ClassMap.h
		${CMAKE_CURRENT_LIST_DIR}/CloudSamplingTools.h
		${CMAKE_CURRENT_LIST_DIR}/ConjugateGradient.h
		${CMAKE_CURRENT_LIST_DIR}/Console.h
		${CMAKE_CURRENT_LIST_DIR}/CVConst.h
		${CMAKE_CURRENT_LIST_DIR}/CVCoreLib.h
                ${CMAKE_CURRENT_LIST_DIR}/CVCoreLibWin.h
		${CMAKE_CURRENT_LIST_DIR}/CVGeom.h
		${CMAKE_CURRENT_LIST_DIR}/CVMath.h
		${CMAKE_CURRENT_LIST_DIR}/CVMiscTools.h
		${CMAKE_CURRENT_LIST_DIR}/CVPlatform.h
		${CMAKE_CURRENT_LIST_DIR}/CVShareable.h
		${CMAKE_CURRENT_LIST_DIR}/CVToolbox.h
		${CMAKE_CURRENT_LIST_DIR}/CVTools.h
		${CMAKE_CURRENT_LIST_DIR}/CVTypes.h
		${CMAKE_CURRENT_LIST_DIR}/CVPointCloud.h
		${CMAKE_CURRENT_LIST_DIR}/CVWidgetsInterface.h
		${CMAKE_CURRENT_LIST_DIR}/Delaunay2dMesh.h
		${CMAKE_CURRENT_LIST_DIR}/DgmOctree.h
		${CMAKE_CURRENT_LIST_DIR}/DgmOctreeReferenceCloud.h
		${CMAKE_CURRENT_LIST_DIR}/DistanceComputationTools.h
		${CMAKE_CURRENT_LIST_DIR}/Eigen.h
		${CMAKE_CURRENT_LIST_DIR}/ErrorFunction.h
		${CMAKE_CURRENT_LIST_DIR}/FastMarching.h
		${CMAKE_CURRENT_LIST_DIR}/FastMarchingForPropagation.h
		${CMAKE_CURRENT_LIST_DIR}/FileSystem.h
		${CMAKE_CURRENT_LIST_DIR}/Garbage.h
		${CMAKE_CURRENT_LIST_DIR}/GenericCloud.h
		${CMAKE_CURRENT_LIST_DIR}/GenericDistribution.h
		${CMAKE_CURRENT_LIST_DIR}/GenericIndexedCloud.h
		${CMAKE_CURRENT_LIST_DIR}/GenericIndexedCloudPersist.h
		${CMAKE_CURRENT_LIST_DIR}/GenericIndexedMesh.h
		${CMAKE_CURRENT_LIST_DIR}/GenericMesh.h
		${CMAKE_CURRENT_LIST_DIR}/GenericOctree.h
		${CMAKE_CURRENT_LIST_DIR}/GenericProgressCallback.h
		${CMAKE_CURRENT_LIST_DIR}/GenericTriangle.h
		${CMAKE_CURRENT_LIST_DIR}/GeometricalAnalysisTools.h
		${CMAKE_CURRENT_LIST_DIR}/Grid3D.h
		${CMAKE_CURRENT_LIST_DIR}/Helper.h
		${CMAKE_CURRENT_LIST_DIR}/IJsonConvertible.h
		${CMAKE_CURRENT_LIST_DIR}/IntersectionTest.h
		${CMAKE_CURRENT_LIST_DIR}/Jacobi.h
		${CMAKE_CURRENT_LIST_DIR}/CVKdTree.h
		${CMAKE_CURRENT_LIST_DIR}/TrueKdTree.h
		${CMAKE_CURRENT_LIST_DIR}/CVLog.h
		${CMAKE_CURRENT_LIST_DIR}/LocalModel.h
		${CMAKE_CURRENT_LIST_DIR}/ManualSegmentationTools.h
		${CMAKE_CURRENT_LIST_DIR}/MathTools.h
		${CMAKE_CURRENT_LIST_DIR}/MeshSamplingTools.h
		${CMAKE_CURRENT_LIST_DIR}/Neighbourhood.h
		${CMAKE_CURRENT_LIST_DIR}/NormalDistribution.h
		${CMAKE_CURRENT_LIST_DIR}/OrientedBoundingBox.h
		${CMAKE_CURRENT_LIST_DIR}/ParallelSort.h
		${CMAKE_CURRENT_LIST_DIR}/PointCloudTpl.h
		${CMAKE_CURRENT_LIST_DIR}/PointProjectionTools.h
		${CMAKE_CURRENT_LIST_DIR}/Polyline.h
		${CMAKE_CURRENT_LIST_DIR}/RayAndBox.h
		${CMAKE_CURRENT_LIST_DIR}/ReferenceCloud.h
		${CMAKE_CURRENT_LIST_DIR}/RegistrationTools.h
		${CMAKE_CURRENT_LIST_DIR}/SaitoSquaredDistanceTransform.h
		${CMAKE_CURRENT_LIST_DIR}/ScalarField.h
		${CMAKE_CURRENT_LIST_DIR}/ScalarFieldTools.h
		${CMAKE_CURRENT_LIST_DIR}/SimpleMesh.h
		${CMAKE_CURRENT_LIST_DIR}/SimpleTriangle.h
		${CMAKE_CURRENT_LIST_DIR}/SquareMatrix.h
		${CMAKE_CURRENT_LIST_DIR}/StatisticalTestingTools.h
		${CMAKE_CURRENT_LIST_DIR}/Timer.h
		${CMAKE_CURRENT_LIST_DIR}/Optional.h
		${CMAKE_CURRENT_LIST_DIR}/ProgressReporters.h
		${CMAKE_CURRENT_LIST_DIR}/WeibullDistribution.h
)

install(
	FILES
		AutoSegmentationTools.h
		BoundingBox.h
		CVConst.h
		Chi2Helper.h
		ClassMap.h
		CVCoreLib.h
		CVGeom.h
		Eigen.h
		CVMath.h
		CVTools.h
		CVMiscTools.h
		CVPlatform.h
		CVShareable.h
		CVToolbox.h
		CVTypes.h
		CVLog.h
		FileSystem.h
		OrientedBoundingBox.h
		IntersectionTest.h
		CVWidgetsInterface.h
		ChamferDistanceTransform.h
		CloudSamplingTools.h
		ConjugateGradient.h
		Delaunay2dMesh.h
		DgmOctree.h
		DgmOctreeReferenceCloud.h
		DistanceComputationTools.h
		ErrorFunction.h
		FastMarching.h
		FastMarchingForPropagation.h
		Garbage.h
		Timer.h
		Helper.h
		IJsonConvertible.h
		GenericCloud.h
		GenericDistribution.h
		GenericIndexedCloud.h
		GenericIndexedCloudPersist.h
		GenericIndexedMesh.h
		GenericMesh.h
		GenericOctree.h
		GenericProgressCallback.h
		GenericTriangle.h
		GeometricalAnalysisTools.h
		Grid3D.h
		Jacobi.h
		CVKdTree.h
		LocalModel.h
		ManualSegmentationTools.h
		MathTools.h
		MeshSamplingTools.h
		Neighbourhood.h
		NormalDistribution.h
		ParallelSort.h
		PointCloud.h
		PointCloudTpl.h
		PointProjectionTools.h
		Polyline.h
		RayAndBox.h
		ReferenceCloud.h
		RegistrationTools.h
		SaitoSquaredDistanceTransform.h
		ScalarField.h
		ScalarFieldTools.h
		SimpleMesh.h
		SimpleTriangle.h
		SquareMatrix.h
		StatisticalTestingTools.h
		TrueKdTree.h
		Optional.h
		ProgressReporters.h
		TrueKdTree.h
		WeibullDistribution.h
	DESTINATION
		include/CVCoreLib
)

target_include_directories( ${PROJECT_NAME}
	PUBLIC
		$<INSTALL_INTERFACE:include/CVCoreLib>
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)

